--- a/createAccount.html
+++ b/createAccount.html
@@ -3,16 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <title>Login Screen</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="loginScreen.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
     <div class="login">
-      <h2>Login Form</h2>
-      <form id="login-form" action="#" method="POST">
-        <input type="text" placeholder="Username" name="username" required>
-        <input type="password" placeholder="Password" name="password" required>
-        <input type="submit" value="Create" id="login-btn">
-      </form>
+      <div class='h-100 m-5 padding-top'>
+        <div class='container h-100'>
+            <div class='row h-100 justify-content-sm-center'>
+                <div class='col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9'>
+                    <div class='card shadow-lg'>
+                        <div class='card-body p-5'>
+                            <h1 class='fs-4 card-title fw-bold mb-4 text-center'>Kayıt Ol</h1>
+                            <form id="login-form" action="#" method="POST">
+                                <div class='mb-3'>
+                                    <label htmlFor="name" class="form-label">Kullanıcı Adı</label>
+                                    <input type="text" class="form-control" placeholder="Kullanıcı adı" name="username" id="username" required>
+                                </div>
+                                <div className='mb-3'>  
+                                    <label htmlFor="password" class="form-label">Şifre</label>
+                                    <input type="password" placeholder="Sifre" name="password" class="form-control" required/>
+                                </div>
+                                
+                                <button type='submit' class='btn btn-primary mt-3' value="Create" id="login-btn">Kayıt Ol  </button>
+                            </form>
+                        </div>    
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
     </div>
     
     <script>
